--- a/Source/Panama/Controls/ColorPicker/Generic.xaml
+++ b/Source/Panama/Controls/ColorPicker/Generic.xaml
@@ -137,6 +137,8 @@
 
     <Style x:Key="ColorItemContainerStyle" TargetType="{x:Type ListBoxItem}">
         <Setter Property="ToolTip" Value="{Binding Name}" />
+        <Setter Property="HorizontalContentAlignment" Value="Left"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
@@ -173,7 +175,7 @@
 
     <DataTemplate x:Key="ColorItemTemplate">
         <Grid>
-            <Border Background="{StaticResource CheckerBrush}" BorderBrush="Black" BorderThickness="1" Margin="2,2,2,2" >
+            <Border Background="{StaticResource CheckerBrush}" BorderBrush="Black" BorderThickness="1" Margin="2" >
                 <Rectangle Width="14" Height="14">
                     <Rectangle.Style>
                         <Style TargetType="Rectangle">
@@ -185,17 +187,18 @@
         </Grid>
     </DataTemplate>
 
-
     <Style x:Key="ColorListStyle" TargetType="ListBox">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="MaxHeight" Value="500" />
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="ItemsPanel">
             <Setter.Value>
                 <ItemsPanelTemplate>
                     <!-- ConverterParameter is margin/Padding from Popup-->
                     <!--<WrapPanel Width="{Binding MaxDropDownWidth, RelativeSource={RelativeSource AncestorType={x:Type local:ColorPicker}}, Converter={StaticResource AdditionConverter}, ConverterParameter=-18}" />-->
-                    <WrapPanel Width="200"/>
+                    <WrapPanel Width="200" />
                 </ItemsPanelTemplate>
             </Setter.Value>
         </Setter>
