--- a/Source/Panama/View/EditControls/ConfigEditColor.xaml
+++ b/Source/Panama/View/EditControls/ConfigEditColor.xaml
@@ -24,6 +24,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.Resources>
             <Style TargetType="TextBlock" BasedOn="{StaticResource TextBlockLabel}">
@@ -67,8 +68,11 @@
         <TextBlock Grid.Row="5" Text="Goner"/>
         <con:ColorPicker Grid.Row="5" Grid.Column="1" SelectedColor="{Binding Config.Colors.PublisherGoner.Foreground}" ColorSortingMode="{Binding ColorSortingMode}"/>
         <con:ColorPicker Grid.Row="5" Grid.Column="2" SelectedColor="{Binding Config.Colors.PublisherGoner.Background}" ColorSortingMode="{Binding ColorSortingMode}"/>
-        
-        <Button Grid.Row="6" Content="Reset" Command="{Binding Commands[ResetColors]}"/>
-        <ItemsControl Grid.Row="7" Grid.ColumnSpan="3" Style="{StaticResource ItemsControlSubSelection}" ItemsSource="{Binding ColorSortingModes}"/>
+
+        <TextBlock Grid.Row="6" Text="Alternation"/>
+        <con:ColorPicker Grid.Row="6" Grid.Column="2" SelectedColor="{Binding Config.Colors.DataGridAlternation.Background}" ColorSortingMode="{Binding ColorSortingMode}"/>
+
+        <Button Grid.Row="7" Content="Reset" Command="{Binding Commands[ResetColors]}"/>
+        <ItemsControl Grid.Row="8" Grid.ColumnSpan="3" Style="{StaticResource ItemsControlSubSelection}" ItemsSource="{Binding ColorSortingModes}"/>
     </Grid>
 </UserControl>
